Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,12 +59,12 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
     "    number_of_destinations= len(travel_destinations)\n",
-    "    "
+    "    retut"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
