--- a/index.ipynb
+++ b/index.ipynb
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    next_up= travel_destination\n",
+    "    next_up= travel_destinations[0]\n",
     "    pass"
    ]
   },
