--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "_destination.append mada\n",
+    "    travel_destinations.append()\n",
+    "\n",
     "    \n",
     "    pass"
    ]
