--- a/index.ipynb
+++ b/index.ipynb
@@ -151,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations.append()\n",
+    "    travel_destinations.append(madagascar)\n",
     "\n",
     "    \n",
     "    pass"
