Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -159,7 +159,7 @@
     "def favorite_destination():\n",
     "    travel_destinations.append(madagascar)\n",
     "\n",
-    "    return favorite_destination"
+    "    pass"
    ]
   },
   {
