--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append[madagascar]\n",
-    "    favorite_desti\n",
+    "    favorite_destination= travel\n",
     "     \n",
     "    pass"
    ]
