--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
     "    travel_destinations.append[madagascar]\n",
     "    favorite_destination= travel_destinations[-1]\n",
     "     \n",
-    "    r"
+    "    return favorite_destination"
    ]
   },
   {
