--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    travel_destinations.append('madagascar')\n",
-    "    favor\n",
+    "    favorite_destination= travels\n",
     "     \n",
     "    return favorite_destination"
    ]
