--- a/index.ipynb
+++ b/index.ipynb
@@ -227,8 +227,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    travel_destinations.upper\n",
-    "    pass"
+    "    travel_destinations.title()\n",
+    "    return capit"
    ]
   },
   {
