--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    travel_destinations.title()\n",
-    "    return trave"
+    "    return travel_destina"
    ]
   },
   {
