--- a/index.ipynb
+++ b/index.ipynb
@@ -228,7 +228,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    capitalize_countries=[]\n",
-    "    For count\n",
+    "    For destination in \n",
     "    return travel_destinations"
    ]
   },
