--- a/index.ipynb
+++ b/index.ipynb
@@ -229,7 +229,7 @@
     "def capitalize_countries():\n",
     "    capitalize_countries=[]\n",
     "    For destination in travel_destinations:\n",
-    "        \n",
+    "        capitalized_countries.append(destination.title())\n",
     "    return travel_destinations"
    ]
   },
