--- a/index.ipynb
+++ b/index.ipynb
@@ -221,15 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 6)",
+     "evalue": "expected an indented block (<ipython-input-68-b7152fd91223>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return capitalize_countries\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-68-b7152fd91223>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    capitalize_countries = []\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -238,7 +238,8 @@
     "def capitalize_countries():\n",
     "capitalize_countries = []\n",
     "for destination in travel_destinations:\n",
-    "        capitalized_countries.append(destination.title())\n",
+    "    capitalized_countries.append(destination.title())\n",
+    "    \n",
     "    return capitalize_countries"
    ]
   },
