Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,15 +221,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-68-b7152fd91223>, line 3)",
+     "evalue": "expected an indented block (<ipython-input-69-1269eb56b812>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-68-b7152fd91223>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    capitalize_countries = []\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-69-1269eb56b812>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    capitalized_countries.append(destination.title())\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
